@@ -1,6 +1,12 @@
 # ChangeLog for sec-policy/selinux-hal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.8 2009/07/22 13:12:30 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.9 2009/08/05 13:35:13 pebenito Exp $
+
+*selinux-hal-2.20090730 (03 Aug 2009)
+
+  03 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
+  +selinux-hal-2.20090730.ebuild:
+  New upstream release.
 
   18 Jul 2009; Chris PeBenito <pebenito@gentoo.org>
   selinux-hal-20070329.ebuild, selinux-hal-20070928.ebuild,
